feat(audit): implement audit center
